--- a/native-federation-microfrontends/mono-workspace-mf/angular.json
+++ b/native-federation-microfrontends/mono-workspace-mf/angular.json
@@ -3,22 +3,30 @@
 	"version": 1,
 	"newProjectRoot": "projects",
 	"projects": {
-		"host": {
+		"shell": {
 			"projectType": "application",
-			"schematics": {},
-			"root": "projects/host",
-			"sourceRoot": "projects/host/src",
-			"prefix": "app",
+			"schematics": {
+				"@schematics/angular:component": {
+					"style": "scss"
+				}
+			},
+			"root": "projects/shell",
+			"sourceRoot": "projects/shell/src",
+			"prefix": "app-shell",
 			"architect": {
 				"build": {
 					"builder": "@angular-architects/native-federation:build",
-					"options": {},
+          "options": {
+            "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css"
+            ]
+          },
 					"configurations": {
 						"production": {
-							"target": "host:esbuild:production"
+							"target": "shell:esbuild:production"
 						},
 						"development": {
-							"target": "host:esbuild:development",
+							"target": "shell:esbuild:development",
 							"dev": true
 						}
 					},
@@ -27,7 +35,7 @@
 				"serve": {
 					"builder": "@angular-architects/native-federation:build",
 					"options": {
-						"target": "host:serve-original:development",
+						"target": "shell:serve-original:development",
 						"rebuildDelay": 0,
 						"dev": true,
 						"port": 0
@@ -43,38 +51,42 @@
 							"zone.js",
 							"zone.js/testing"
 						],
-						"tsConfig": "projects/host/tsconfig.spec.json",
+						"tsConfig": "projects/shell/tsconfig.spec.json",
+						"inlineStyleLanguage": "scss",
 						"assets": [
 							{
 								"glob": "**/*",
-								"input": "projects/host/public"
+								"input": "projects/shell/public"
 							}
 						],
 						"styles": [
-							"projects/host/src/styles.css"
-						],
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "projects/shell/src/styles.scss"
+            ],
 						"scripts": []
 					}
 				},
 				"esbuild": {
 					"builder": "@angular-devkit/build-angular:application",
 					"options": {
-						"outputPath": "dist/host",
-						"index": "projects/host/src/index.html",
-						"browser": "projects/host/src/main.ts",
+						"outputPath": "dist/shell",
+						"index": "projects/shell/src/index.html",
+						"browser": "projects/shell/src/main.ts",
 						"polyfills": [
 							"zone.js",
 							"es-module-shims"
 						],
-						"tsConfig": "projects/host/tsconfig.app.json",
+						"tsConfig": "projects/shell/tsconfig.app.json",
+						"inlineStyleLanguage": "scss",
 						"assets": [
 							{
 								"glob": "**/*",
-								"input": "projects/host/public"
+								"input": "projects/shell/public"
 							}
 						],
 						"styles": [
-							"projects/host/src/styles.css"
+              "@angular/material/prebuilt-themes/azure-blue.css",
+							"projects/shell/src/styles.scss"
 						],
 						"scripts": []
 					},
@@ -88,8 +100,8 @@
 								},
 								{
 									"type": "anyComponentStyle",
-									"maximumWarning": "2kB",
-									"maximumError": "4kB"
+									"maximumWarning": "4kB",
+									"maximumError": "8kB"
 								}
 							],
 							"outputHashing": "all"
@@ -106,10 +118,10 @@
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"configurations": {
 						"production": {
-							"buildTarget": "host:esbuild:production"
+							"buildTarget": "shell:esbuild:production"
 						},
 						"development": {
-							"buildTarget": "host:esbuild:development"
+							"buildTarget": "shell:esbuild:development"
 						}
 					},
 					"defaultConfiguration": "development",
@@ -119,22 +131,30 @@
 				}
 			}
 		},
-		"remote": {
+		"products": {
 			"projectType": "application",
-			"schematics": {},
-			"root": "projects/remote",
-			"sourceRoot": "projects/remote/src",
-			"prefix": "app",
+			"schematics": {
+				"@schematics/angular:component": {
+					"style": "scss"
+				}
+			},
+			"root": "projects/products",
+			"sourceRoot": "projects/products/src",
+			"prefix": "app-products",
 			"architect": {
 				"build": {
 					"builder": "@angular-architects/native-federation:build",
-					"options": {},
+          "options": {
+            "styles": [
+              "@angular/material/prebuilt-themes/azure-blue.css"
+            ]
+          },
 					"configurations": {
 						"production": {
-							"target": "remote:esbuild:production"
+							"target": "products:esbuild:production"
 						},
 						"development": {
-							"target": "remote:esbuild:development",
+							"target": "products:esbuild:development",
 							"dev": true
 						}
 					},
@@ -143,7 +163,7 @@
 				"serve": {
 					"builder": "@angular-architects/native-federation:build",
 					"options": {
-						"target": "remote:serve-original:development",
+						"target": "products:serve-original:development",
 						"rebuildDelay": 0,
 						"dev": true,
 						"port": 0
@@ -159,38 +179,42 @@
 							"zone.js",
 							"zone.js/testing"
 						],
-						"tsConfig": "projects/remote/tsconfig.spec.json",
+						"tsConfig": "projects/products/tsconfig.spec.json",
+						"inlineStyleLanguage": "scss",
 						"assets": [
 							{
 								"glob": "**/*",
-								"input": "projects/remote/public"
+								"input": "projects/products/public"
 							}
 						],
 						"styles": [
-							"projects/remote/src/styles.css"
-						],
+              "@angular/material/prebuilt-themes/azure-blue.css",
+              "projects/products/src/styles.scss"
+            ],
 						"scripts": []
 					}
 				},
 				"esbuild": {
 					"builder": "@angular-devkit/build-angular:application",
 					"options": {
-						"outputPath": "dist/remote",
-						"index": "projects/remote/src/index.html",
-						"browser": "projects/remote/src/main.ts",
+						"outputPath": "dist/products",
+						"index": "projects/products/src/index.html",
+						"browser": "projects/products/src/main.ts",
 						"polyfills": [
 							"zone.js",
 							"es-module-shims"
 						],
-						"tsConfig": "projects/remote/tsconfig.app.json",
+						"tsConfig": "projects/products/tsconfig.app.json",
+						"inlineStyleLanguage": "scss",
 						"assets": [
 							{
 								"glob": "**/*",
-								"input": "projects/remote/public"
+								"input": "projects/products/public"
 							}
 						],
 						"styles": [
-							"projects/remote/src/styles.css"
+              "@angular/material/prebuilt-themes/azure-blue.css",
+							"projects/products/src/styles.scss"
 						],
 						"scripts": []
 					},
@@ -204,8 +228,8 @@
 								},
 								{
 									"type": "anyComponentStyle",
-									"maximumWarning": "2kB",
-									"maximumError": "4kB"
+									"maximumWarning": "4kB",
+									"maximumError": "8kB"
 								}
 							],
 							"outputHashing": "all"
@@ -222,10 +246,10 @@
 					"builder": "@angular-devkit/build-angular:dev-server",
 					"configurations": {
 						"production": {
-							"buildTarget": "remote:esbuild:production"
+							"buildTarget": "products:esbuild:production"
 						},
 						"development": {
-							"buildTarget": "remote:esbuild:development"
+							"buildTarget": "products:esbuild:development"
 						}
 					},
 					"defaultConfiguration": "development",
